# staggered-file-backup

./: .env  .env.ps1  CHANGELOG.md  Cargo.toml  README.md  build.rs  codebook.toml  diesel.toml
.github/workflows/: release.yml
icon/: LICENSE
migrations/2025-10-01-111135-0000_v1/: down.sql  up.sql
scripts/: archive-release.ps1  collect-pgo-profiles.ps1
src/: cleanup.rs  file.rs  hash.rs  logging.rs  main.rs  model.rs  parsing.rs  schema.rs  setup.rs
src/backup/: backup.rs  cleanup.rs  db.rs  file.rs  hash.rs  mod.rs  parsing.rs
wix/: main.wxs
