[package]
name = "staggered-file-backup"
description = "An easy and secure staggered file backup solution"
authors = ["Adam McKellar <dev@mckellar.eu>"]
version = "0.1.0-alpha.0"
edition = "2024"
repository = "https://github.com/WyvernIXTL/staggered-file-backup"
categories = ["command-line-utilities"]
keywords = ["backup", "staggered"]

[dependencies]
chrono = "0.4.42"
clap = { version = "4.5.48", features = ["derive"] }
clap_complete = "4.5.58"
color-eyre = { version = "0.6.5", default-features = false, features = ["capture-spantrace"] }
directories = "6.0.0"
hex = "0.4.3"
hmac-sha256 = "1.1.12"
license-fetcher = "0.8.4"
log = "0.4.28"
regex = "1.11.3"
simplelog = "0.12.2"
trash = "5.2.3"

[build-dependencies]
license-fetcher = { version = "0.8.4", features = ["build"] }

[profile.optimized]
inherits = "release"
lto = "fat"
codegen-units = 1
