[package]
name = "staggered-file-backup"
description = "An easy and secure staggered file backup solution"
authors = ["Adam McKellar <dev@mckellar.eu>"]
version = "0.1.0-alpha.3"
edition = "2024"
repository = "https://github.com/WyvernIXTL/staggered-file-backup"
categories = ["command-line-utilities"]
keywords = ["backup", "staggered"]
license = "MPL-2.0"
license-file = "LICENSE"

[dependencies]
bitcode = { version = "0.6.7", features = ["serde"] }
chrono = "0.4.42"
clap = { version = "4.5.48", features = ["derive"] }
clap_complete = "4.5.58"
color-eyre = { version = "0.6.5", default-features = false, features = ["capture-spantrace"] }
diesel = { version = "2.3.2", features = ["sqlite", "uuid"] }
diesel_migrations = { version = "2.3.0", features = ["sqlite"] }
directories = "6.0.0"
hex = "0.4.3"
hmac-sha256 = "1.1.12"
libsqlite3-sys = { version = "0.35.0", features = ["bundled"] }
license-fetcher = "0.8.4"
log = "0.4.28"
regex = "1.11.3"
serde = { version = "1.0.228", features = ["derive"] }
simplelog = "0.12.2"
trash = "5.2.3"
uuid = { version = "1.18.1", features = ["serde", "v7"] }

[build-dependencies]
license-fetcher = { version = "0.8.4", features = ["build"] }

[profile.optimized]
inherits = "release"
lto = "fat"
codegen-units = 1

[package.metadata.packager]
identifier = "com.github.wyvernixtl.staggered-file-backup"
out_dir = "./target/"
icons = [
    "./icon/Icon-exported-256px.png",
    "./icon/icon.ico"
]
